dev/ingress/fake38-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake38-ingress
  namespace: fake38-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake38.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake38-service
                port:
                  number: 20038
